[project]
name = "payroll-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=3.0.0",
    "boto3>=1.38.32",
    "dbt-core>=1.9.6",
    "dbt-snowflake>=1.9.4",
    "duckdb>=1.3.0",
    "ipykernel>=6.29.5",
    "pymupdf>=1.26.0",
    "pyspark==3.3.0",
]
